Fixed pictures on index page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span> 
           </button>
-          <a class="navbar-brand" href="index.html"><img src="Z:\jruhl\NewWebSite\images\logo_name_white.jpg" alt="Microtips Technology USA" height=50px></a>
+          <a class="navbar-brand" href="index.html"><img src="images\logo_name_white.jpg" alt="Microtips Technology USA" height=50px></a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
@@ -64,32 +64,32 @@
     <div class="row">
       <h1 style="padding-top: 20px;">Products</h1>
       <a href="products.html#tftTab" class="col-lg-4 col-md-4 col-xs-6 hs2links">
-        <img class="img-responsive productImage" src="Z:/jruhl/NewWebSite/images/index/MTD0500EZG-T-6 TFT.png" height="200px">
+        <img class="img-responsive productImage" src="images/index/MTD0500EZG-T-6 TFT.png" height="200px">
         <h3>TFT</h3>
         <p>A TFT LCD can give your product the perfect display. You can customize with different sizes, resolutions, and technologies like IPS.</p>
       </a>
       <a href="products.html#oledTab" class="col-lg-4 col-md-4 col-xs-6 hs2links">
-        <img class="img-responsive productImage" src="Z:/jruhl/NewWebSite/images/index/DLC0550CZOM OLED.jpg" height="200px">
+        <img class="img-responsive productImage" src="images/index/DLC0550CZOM OLED.jpg" height="200px">
         <h3>OLED</h3>
         <p>An OLED LCD gives your product great resolution and rich, vibrant colors. Available in full-color Active Matrix or single-color Passive Matrix.</p>
       </a>
       <a href="products.html#tpTab" class="col-lg-4 col-md-4 col-xs-6 hs2links">
-        <img class="img-responsive productImage" src="Z:/jruhl/NewWebSite/images/index/R0023713 TP.jpg" height="200px">
+        <img class="img-responsive productImage" src="images/index/R0023713 TP.jpg" height="200px">
         <h3>Touch Panel</h3>
         <p>A Touch Panel can bring your product and it's user closer together. We can provide a Capacitive or Resistive Touch Panel to ANY of our displays.</p>
       </a>
       <a href="products.html#charmonoTab" class="col-lg-4 col-md-4 col-xs-6 hs2links">
-        <img class="img-responsive productImage" src="Z:/jruhl/NewWebSite/images/index/C16204A-001 Character Monochrome.jpg" height="200px">
+        <img class="img-responsive productImage" src="images/index/C16204A-001 Character Monochrome.jpg" height="200px">
         <h3>Character Monochrome</h3>
         <p>A Character Monochrome LCD is a simple, easy to read and use display solution. Although not as popular as before, we still provide fully custom character displays.</p>
       </a>
       <a href="products.html#graphmonoTab" class="col-lg-4 col-md-4 col-xs-6 hs2links">
-        <img class="img-responsive productImage" src="Z:/jruhl/NewWebSite/images/index/DSCN2808.jpg" height="200px">
+        <img class="img-responsive productImage" src="images/index/DSCN2808.jpg" height="200px">
         <h3>Graphic Monochrome</h3>
         <p>A Graphic Monochrome LCD can add a lot of customization to your product over a character display. We provide any size, resolution, and color.</p>
       </a>
       <a href="products.html#customTab" class="col-lg-4 col-md-4 col-xs-6 hs2links">
-        <img class="img-responsive productImage" src="Z:/jruhl/NewWebSite/images/index/Icon Segment Ultrablack Demo.jpg" height="200px">
+        <img class="img-responsive productImage" src="images/index/Icon Segment Ultrablack Demo.jpg" height="200px">
         <h3>Custom Segment</h3>
         <p>For when your project needs a truly iconic look. We can provide a Custom Segment LCD with any number of segments, custom icons, and in any color.</p>
       </a>
