Fixed stylesheet reference on index page

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <title>Microtips Technology USA</title>
-  <link rel="icon" href="Z:\jruhl\NewWebSite\images\logo_only.png">
+  <link rel="icon" href="images\logo_only.png">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="Z:\jruhl\NewWebSite\Jstylesheet.css">
+  <link rel="stylesheet" href="Jstylesheet.css">
 </head>
 
 <body link="black">
