--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
         <h3>Touch Panel</h3>
         <p>A Touch Panel can bring your product and it's user closer together. We can provide a Capacitive or Resistive Touch Panel to ANY of our displays.</p>
       </a>
+    </div>
+    <div class="row">
       <a href="products.html#charmonoTab" class="col-lg-4 col-md-4 col-xs-6 hs2links">
         <img class="img-responsive productImage" src="images/index/C16204A-001 Character Monochrome.jpg" height="200px">
         <h3>Character Monochrome</h3>
@@ -108,7 +110,7 @@
       	<h1 style="text-align: center;">News</h1>
       </a>
       <div class="col-sm-6 col-xs-12" style="padding-bottom: 30px;">
-        <img class="img-responsive" src="Z:/jruhl/NewWebSite/images/index/MTD0500EZG-T-6 TFT.png" width=500px>
+        <img class="img-responsive" src="images/index/MTD0500EZG-T-6 TFT.png" width=500px>
       </div>
       <div class="col-sm-6 col-xs-12" style="padding-bottom: 30px;">
         <h3>New Screen</h3>
