--- a/products.html
+++ b/products.html
@@ -2,15 +2,16 @@
 <html lang="en">
 <head>
   <title>Microtips Technology USA</title>
-  <link rel="icon" href="Z:\jruhl\NewWebSite\images\logo_only.png">
+  <link rel="icon" href="images\logo_only.png">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="Z:\jruhl\NewWebSite\Jstylesheet.css">
+  <link rel="stylesheet" href="Jstylesheet.css">
 </head>
-<body>
+
+<body link="black">
 
 <div class="example3">
   <nav class="navbar navbar-default navbar-fixed-top" style="background-color: white;">
@@ -26,7 +27,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span> 
           </button>
-          <a class="navbar-brand" href="index.html"><img src="Z:\jruhl\NewWebSite\images\logo_name_white.jpg" alt="Microtips Technology USA" height=50px></a>
+          <a class="navbar-brand" href="index.html"><img src="images\logo_name_white.jpg" alt="Microtips Technology USA" height=50px></a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
