Fixed (hopefully) all images

--- a/products.html
+++ b/products.html
@@ -75,7 +75,7 @@
           </div>
           <div class="row">
             <div class="col-xs-12 col-sm-4">
-              <img class="img-responsive" src="Z:/jruhl/NewWebSite/images/products/tft/2.4 TFT.JPG">
+              <img class="img-responsive" src="images/products/tft/2.4 TFT.JPG">
             </div>
             <div class="col-sm-8 col-xs-12">
               <p>Our Color TFT LCDs are designed for ultra high crystals, with high quality, and performance. TFT LCD Module helps a person to see the contrast more clearly and precisely. The construction of a Color LCD Module or TFT LCD Module is quite extraordinary because of the circuitry layout process upon which TFT LCD Modules are made is quite similar to that of a semiconductor product. Color LCD Modules comes in many different sizes such as 2.4 inch, 2.8 inch 3.5 inch 4.3 inch 5.7 inch, 7.0 inch. Our 3.5” is our most popular one, because of the different type of application involve with this display. The interface types are CPU Mode (RGB/Digital TTL) 2.4, 2.8, 3.5, 5.7 and 7”. Our color LCD Module has a Sync Mode(RGB/Digital TTL) with data Enable mode (RGB/Digital TTL) LVDS. Most of our color TFT LCD Modules has White LED backlighting which is a energy saver in the long run. High or extended temperature TFTs available with 4-8 wire resistive and capacitive touch panel.</p>
@@ -91,7 +91,7 @@
               <p>LCD module touch are use to make life more efficient, base on a introductory finding by 3M in 2002, touch screen capabilities where advance base on a system which use sensors to detect the electric charge that accumulates in certain solid materials like for instance the glass of an LCD when there is interactions with screen. There is also a complex algorithm with these devices which analytically provide the actual location of the touch. Another prospect that associate with TFT Display Modules and color LCD Modules in general is the Driver IC controller Himax and Sitronix. These particular IC are use as the Driver controller for many displays around our world today, as Microtips Technology promote innovation and technical support we can conclude that we are here to meet any of your TFT display module needs both standard and customize.</p>
             </div>
             <div class="col-sm-4 col-xs-12">
-              <img class="img-responsive" src="Z:/jruhl/NewWebSite/images/products/tft/7.0 TFT.png">
+              <img class="img-responsive" src="images/products/tft/7.0 TFT.png">
             </div>
           </div>
           <div class="row">
@@ -115,7 +115,7 @@
           </div>
           <div class="row">
             <div class="col-xs-12 col-sm-4">
-              <img class="img-responsive" src="Z:/jruhl/NewWebSite/images/products/oled/DLC0550AZOM-T OLED.JPG">
+              <img class="img-responsive" src="images/products/oled/DLC0550AZOM-T OLED.JPG">
             </div>
             <div class="col-sm-8 col-xs-12">
               <p>OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED </p>
