Fixed news pic on index page and pics on about page

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       	<h1 style="text-align: center;">News</h1>
       </a>
       <div class="col-sm-6 col-xs-12" style="padding-bottom: 30px;">
-        <img class="img-responsive" src="images/index/MTD0500EZG-T-6 TFT.png" width=500px>
+        <img class="img-responsive" src="images/index/TFT.png" width=500px>
       </div>
       <div class="col-sm-6 col-xs-12" style="padding-bottom: 30px;">
         <h3>New Screen</h3>
