--- a/about.html
+++ b/about.html
@@ -70,37 +70,37 @@
     <h1>Meet the Team</h1>
     <div class="row">
       <div class="col-lg-4 col-md-4 col-xs-6 meetTeam">
-        <img class="img-responsive" style="padding-top: 15px;" src="Z:\jruhl\NewWebSite\images\about\team\GOPR0945.jpg">
+        <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\GOPR0945.jpg">
         <h2>Jordan Baker</h2>
         <h5>Sales Manager</h5>
         <h5>North America - West</h5>
       </div>
       <div class="col-lg-4 col-md-4 col-xs-6 meetTeam">
-        <img class="img-responsive" style="padding-top: 15px;" src="Z:\jruhl\NewWebSite\images\about\team\GOPR0945.jpg">
+        <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\GOPR0945.jpg">
         <h2>Jordan Baker</h2>
         <h5>Sales Manager</h5>
         <h5>North America - West</h5>
       </div>
       <div class="col-lg-4 col-md-4 col-xs-6 meetTeam">
-        <img class="img-responsive" style="padding-top: 15px;" src="Z:\jruhl\NewWebSite\images\about\team\GOPR0945.jpg">
+        <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\GOPR0945.jpg">
         <h2>Jordan Baker</h2>
         <h5>Sales Manager</h5>
         <h5>North America - West</h5>
       </div>
       <div class="col-lg-4 col-md-4 col-xs-6 meetTeam">
-        <img class="img-responsive" style="padding-top: 15px;" src="Z:\jruhl\NewWebSite\images\about\team\GOPR0945.jpg">
+        <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\GOPR0945.jpg">
         <h2>Jordan Baker</h2>
         <h5>Sales Manager</h5>
         <h5>North America - West</h5>
       </div>
       <div class="col-lg-4 col-md-4 col-xs-6 meetTeam">
-        <img class="img-responsive" style="padding-top: 15px;" src="Z:\jruhl\NewWebSite\images\about\team\GOPR0945.jpg">
+        <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\GOPR0945.jpg">
         <h2>Jordan Baker</h2>
         <h5>Sales Manager</h5>
         <h5>North America - West</h5>
       </div>
       <div class="col-lg-4 col-md-4 col-xs-6 meetTeam">
-        <img class="img-responsive" style="padding-top: 15px;" src="Z:\jruhl\NewWebSite\images\about\team\GOPR0945.jpg">
+        <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\GOPR0945.jpg">
         <h2>Jordan Baker</h2>
         <h5>Sales Manager</h5>
         <h5>North America - West</h5>
@@ -118,17 +118,17 @@
     <h1>Locations</h1>
     <div class="row">
       <div class="col-xs-4">
-        <img class="img-responsive" src="Z:\jruhl\NewWebSite\images\about\locations\MTT.JPG">
+        <img class="img-responsive" src="images\about\locations\MTT.JPG">
         <h2>USA</h2>
         <p>3504 Lake Lynda Drive, Orlando, FL, 32817</p>
       </div>
       <div class="col-xs-4">
-        <img class="img-responsive" src="Z:\jruhl\NewWebSite\images\about\locations\MTT.JPG">
+        <img class="img-responsive" src="images\about\locations\MTT.JPG">
         <h2>Taiwan</h2>
         <p>Somewhere in Taiwan</p>
       </div>
       <div class="col-xs-4">
-        <img class="img-responsive" src="Z:\jruhl\NewWebSite\images\about\locations\MTT.JPG">
+        <img class="img-responsive" src="images\about\locations\MTT.JPG">
         <h2>China</h2>
         <p>Somewhere in China</p>
       </div>
