Fixed JB pic on about page

--- a/about.html
+++ b/about.html
@@ -70,37 +70,37 @@
     <h1>Meet the Team</h1>
     <div class="row">
       <div class="col-lg-4 col-md-4 col-xs-6 meetTeam">
-        <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\GOPR0945.jpg">
+        <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\JB.jpg">
         <h2>Jordan Baker</h2>
         <h5>Sales Manager</h5>
         <h5>North America - West</h5>
       </div>
       <div class="col-lg-4 col-md-4 col-xs-6 meetTeam">
-        <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\GOPR0945.jpg">
+        <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\JB.jpg">
         <h2>Jordan Baker</h2>
         <h5>Sales Manager</h5>
         <h5>North America - West</h5>
       </div>
       <div class="col-lg-4 col-md-4 col-xs-6 meetTeam">
-        <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\GOPR0945.jpg">
+        <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\JB.jpg">
         <h2>Jordan Baker</h2>
         <h5>Sales Manager</h5>
         <h5>North America - West</h5>
       </div>
       <div class="col-lg-4 col-md-4 col-xs-6 meetTeam">
-        <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\GOPR0945.jpg">
+        <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\JB.jpg">
         <h2>Jordan Baker</h2>
         <h5>Sales Manager</h5>
         <h5>North America - West</h5>
       </div>
       <div class="col-lg-4 col-md-4 col-xs-6 meetTeam">
-        <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\GOPR0945.jpg">
+        <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\JB.jpg">
         <h2>Jordan Baker</h2>
         <h5>Sales Manager</h5>
         <h5>North America - West</h5>
       </div>
       <div class="col-lg-4 col-md-4 col-xs-6 meetTeam">
-        <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\GOPR0945.jpg">
+        <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\JB.jpg">
         <h2>Jordan Baker</h2>
         <h5>Sales Manager</h5>
         <h5>North America - West</h5>
