--- a/news.html
+++ b/news.html
@@ -6,6 +6,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="Jstylesheet.css">
@@ -32,13 +34,14 @@
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
             <li><a href="about.html">About</a></li>
-            <li><a href="index.html#productSection">Products & Industries</a></li> 
+            <li><a href="index.html#productSection">Products</a></li> 
+            <li><a href="index.html#industrySection">Industries</a></li> 
             <li><a href="news.html">News</a></li>
             <li><a href="distreps.html">Distributors & Reps</a></li>
           </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li style="padding-top: 15px; padding-left: 15px"><button class="btn btn-info navbar-btn" id="myBtn">Contact Us!</button></li>
-          </ul>
+          <div class="nav navbar-nav navbar-right">
+            <button class="btn btn-info navbar-btn" id="myBtn">Contact Us!</button>
+          </div>
         </div>
       </div>
     </div>
