We're gonna try to have OLED product section show up right

--- a/products.html
+++ b/products.html
@@ -45,14 +45,14 @@
   </nav>
 </div>
 
-<div class="col-xs-12" style="height: 125px;"></div>
+<div class="col-xs-12" id="topSection" style="height: 125px;"></div>
 
 <div class="navbar nav">
   <div class="tabbable"> <!-- Only required for left/right tabs -->
     <div class="container">
       <ul class="nav nav-tabs">
         <li class="active"><a href="#tftTab" data-toggle="tab">TFT</a></li>
-        <li><a href="#oledTab" data-toggle="tab">OLED</a></li>
+        <li><a href="#oledTab#topSection" data-toggle="tab">OLED</a></li>
         <li><a href="#tpTab" data-toggle="tab">Touch Panel</a></li>
         <li><a href="#charmonoTab" data-toggle="tab">Character Monochrome</a></li>
         <li><a href="#graphmonoTab" data-toggle="tab">Graphic Monochrome</a></li>
