--- a/products.html
+++ b/products.html
@@ -55,7 +55,7 @@
     <div class="container">
       <ul class="nav nav-tabs">
         <li class="active"><a href="#tftTab" data-toggle="tab">TFT</a></li>
-        <li><a href="#oledTab#topSection" data-toggle="tab">OLED</a></li>
+        <li><a href="#oledTab" data-toggle="tab">OLED</a></li>
         <li><a href="#tpTab" data-toggle="tab">Touch Panel</a></li>
         <li><a href="#charmonoTab" data-toggle="tab">Character Monochrome</a></li>
         <li><a href="#graphmonoTab" data-toggle="tab">Graphic Monochrome</a></li>
