--- a/products.html
+++ b/products.html
@@ -48,7 +48,7 @@
   </nav>
 </div>
 
-<div class="col-xs-12" id="topSection" style="height: 125px;"></div>
+<div class="col-xs-12" style="height: 125px;"></div>
 
 <div class="navbar nav">
   <div class="tabbable"> <!-- Only required for left/right tabs -->
