added industrial links and additional styling. customized the industries.html file. tweaked the shiftWindow script

--- a/index.html
+++ b/index.html
@@ -106,30 +106,30 @@
   </div>
     <div class="row">
       <div class="col-md-3 col-sm-0"></div>
-      <div class="col-md-1 col-sm-4 col-xs-4" style="padding-bottom: 20px;">
-        <i class="fa fa-car" style="font-size: 64px;"></i>
+      <a href="industries.html#automotiveTab" class="col-md-1 col-sm-4 col-xs-4 industryLinks" style="padding-bottom: 20px;">
+        <i class="fa fa-car industryLinks" style="font-size: 64px;"></i>
         <p style="font-weight: bold; padding-top: 10px;">Automotive</p>
-      </div>
-      <div class="col-md-1 col-sm-4 col-xs-4" style="padding-bottom: 20px;">
-        <i class="fa fa-industry" style="font-size: 64px;"></i>
+      </a>
+      <a href="industries.html#industrialTab" class="col-md-1 col-sm-4 col-xs-4 industryLinks" style="padding-bottom: 20px;">
+        <i class="fa fa-industry industryLinks" style="font-size: 64px;"></i>
         <p style="font-weight: bold; padding-top: 10px">Industrial</p>
-      </div>
-      <div class="col-md-1 col-sm-4 col-xs-4" style="padding-bottom: 20px;">
-        <i class="fa fa-heartbeat" style="font-size: 64px;"></i>
+      </a>
+      <a href="industries.html#medicalTab" class="col-md-1 col-sm-4 col-xs-4 industryLinks" style="padding-bottom: 20px;">
+        <i class="fa fa-heartbeat industryLinks" style="font-size: 64px;"></i>
         <p style="font-weight: bold; padding-top: 10px">Medical</p>
-      </div>
-      <div class="col-md-1 col-sm-4 col-xs-4" style="padding-bottom: 20px;">
-        <i class="fa fa-desktop" style="font-size: 64px;"></i>
+      </a>
+      <a href="industries.html#consumerTab" class="col-md-1 col-sm-4 col-xs-4 industryLinks" style="padding-bottom: 20px;">
+        <i class="fa fa-desktop industryLinks" style="font-size: 64px;"></i>
         <p style="font-weight: bold; padding-top: 10px">Consumer</p>
-      </div>
-      <div class="col-md-1 col-sm-4 col-xs-4" style="padding-bottom: 20px;">
-        <i class="fa fa-thermometer-half" style="font-size: 64px;"></i>
+      </a>
+      <a href="industries.html#hvacTab" class="col-md-1 col-sm-4 col-xs-4 industryLinks" style="padding-bottom: 20px;">
+        <i class="fa fa-thermometer-half industryLinks" style="font-size: 64px;"></i>
         <p style="font-weight: bold; padding-top: 10px">HVAC</p>
-      </div>
-      <div class="col-md-1 col-sm-4 col-xs-4" style="padding-bottom: 20px;">
-        <i class="fa fa-phone" style="font-size: 64px;"></i>
+      </a>
+      <a href="industries.html#telecomTab" class="col-md-1 col-sm-4 col-xs-4 industryLinks" style="padding-bottom: 20px;">
+        <i class="fa fa-phone industryLinks" style="font-size: 64px;"></i>
         <p style="font-weight: bold; padding-top: 10px">Telecom</p>
-      </div>
+      </a>
       <div class="col-md-3 col-sm-0"></div>
     </div>
 </div>
