Shift window function now works on Industries page. Added content to DistReps page. Trying out showing different content on desktop and mobile with new IDs and stylesheet tags

--- a/distreps.html
+++ b/distreps.html
@@ -48,6 +48,67 @@
   </nav>
 </div>
 
+<div class="col-xs-12" style="height: 125px;"></div>
+
+<div class="container" id=”content-desktop”>
+  <h1>Distributors</h1>
+  <div class="blueSplitter"></div>
+  <div class="row" style="padding-top: 25px;">
+    <div class="col-xs-12 col-sm-4" style="padding: 15px;">
+      <a href="http://www.mouser.com/microtips/">
+        <img class="img-responsive" src="images\distreps\mouser.png">
+      </a>
+    </div>
+    <div class="col-xs-12 col-sm-4" style="padding: 15px;">
+      <a href="http://www.avnet.co.za/manufacturer-microtips-technology.html">
+        <img class="img-responsive" src="images\distreps\avnet.svg">
+      </a>
+    </div>
+    <div class="col-xs-12 col-sm-4" style="padding: 15px;">
+      <a href="http://www.worldmicro.com/">
+        <img class="img-responsive" src="images\distreps\worldMicro.png">
+      </a>
+    </div>
+  </div>
+
+  <h1>Representatives</h1>
+  <div class="blueSplitter"></div>
+  <div class="row" style="padding-top: 25px;">
+    <div class="col-xs-12 col-sm-4">
+      <h3>United States</h3>
+      <div class="blueSplitter"></div>
+      <div class="col-xs-4">
+        <p class="reps">Alabama</p>
+      </div>
+      <div class="col-xs-4">
+        <p class="reps">Alaska</p>
+      </div>
+      <div class="col-xs-4">
+        <p class="reps">Arizona</p>
+      </div>
+      <div class="col-xs-4">
+        <p class="reps">Arkansas</p>
+      </div>
+      <div class="col-xs-4">
+        <p class="reps">California</p>
+      </div>
+      <div class="col-xs-4">
+        <p class="reps">Colorado</p>
+      </div>
+
+      <h3>Canada</h3>
+      <div class="blueSplitter"></div>
+      
+      <h3>Mexico</h3>
+      <div class="blueSplitter"></div>
+    </div>
+  </div>
+</div>
+
+<div class="container" id="content-mobile">
+  <h1 style="padding-top: 300px;">Coming soon!</h1>
+</div>
+
 <div class="subsection">
   <div class="container">
     <div class="row">
