--- a/industries.html
+++ b/industries.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="Jstylesheet.css">
 </head>
 
-<body link="black">
+<body link="black" onload="load()">
 
 <div class="example3">
   <nav class="navbar navbar-default navbar-fixed-top" style="background-color: white;">
